src/ui/tray.h

/*
 * Tray icon library - Cross-platform system tray implementation
 * Based on dmikushin/tray (https://github.com/dmikushin/tray)
 * MIT License
 */

#ifndef TRAY_H
#define TRAY_H

#include <stdbool.h>

#ifdef __cplusplus
extern "C" {
#endif

struct tray_menu;

struct tray {
    const char *icon_filepath;
    const char *tooltip;
    void (*cb)(struct tray *tray);
    struct tray_menu *menu;
};

struct tray_menu {
    const char *text;
    int disabled;
    int checked;
    void (*cb)(struct tray_menu *item);
    struct tray_menu *submenu;
};

/* Initialize the tray icon and menu */
int tray_init(struct tray *tray);

/* Run one iteration of the event loop */
/* If blocking is non-zero, blocks until an event occurs */
/* Returns 0 normally, -1 if tray_exit() was called */
int tray_loop(int blocking);

/* Update the tray icon, tooltip, and menu */
void tray_update(struct tray *tray);

/* Tear down AppKit tray state before replacing the process */
void tray_prepare_for_restart(void);

/* Signal the event loop to exit */
void tray_exit(void);

/* Returns true once if the screen was unlocked since last check */
bool tray_screen_was_unlocked(void);

/* Returns true once if the native tray needs a process restart */
bool tray_needs_restart(void);

/* Last status-item health verdict, for the Rust side to log transitions into
 * the app log file (NSLog from the native layer only reaches the unified
 * system log, which participants don't send us). Values:
 *   0 = not yet checked
 *   1 = attached (button has a backing menu-bar window)
 *   2 = detached (had a window earlier, currently none)
 *   3 = never attached (no backing window since creation)
 */
int tray_status_item_health_state(void);

#ifdef __cplusplus
}
#endif

#endif /* TRAY_H */